# comp0034-tutorials

./: .gitignore  README.md  pyproject.toml  requirements.txt
activities/week1/: 1-0-setup-intro.md  1-1-dash-app-layout.md  1-1-setup-intro.md  1-1-setup.md  1-2-add-bootstrap.md  1-2-dash-app-layout.md  1-2-intro.md  1-3-12columnlayout.md  1-3-add-bootstrap.md  1-3-dash-app-layout.md  1-4-12columnlayout.md  1-4-add-bootstrap.md  1-4-add-html-components.md  1-5-12columnlayout.md  1-5-add-html-components.md  1-5-multipage-app.md  1-6-add-html-components.md  1-6-multipage-app.md  1-7-multipage-app.md
activities/week2/: 2-0-intro.md  2-1-intro.md  2-1-line-chart.md  2-2-bar-chart.md  2-2-line-chart.md  2-3-bar-chart.md  2-3-scatter-map.md  2-4-scatter-map.md  2-4-stats-card.md  2-5-challenge.md  2-5-stats-card.md
activities/week3/: 3-1-intro.md  3-2-line-chart-callback.md  3-3-bar-chart-callback.md  3-4-map-card-callback.md  3-5-further-info.md
activities/week4/: 4-0-intro.md  4-1-test-app-url.md  4-2-locate-elements.md  4-3-interactions.md  4-4-actions.md  4-6-complex-selector.md  4-6-more.md
activities/week6/: 6-1-intro.md  6-2-structure.md  6-3-templates.md  6-4-jinja.md  6-5-variable-routes.md
activities/week7/: 7-1-introduction.md  7-2-initialise.md  7-3-classes-models.md  7-4-relationships.md  7-5-create-database.md  7-6-queries.md  7-7-sqlite3.md
activities/week8/: 8-1-intro.md  8-2-page-db.md  8-3-page-api.md  8-4-page-form.md  8-5-page-chart.md  8-6-page-ml.md  8-7-navbar.md  8-8-other.md
activities/week9/: 9-1-intro.md  9-2-flask-test-client.md  9-3-flask-route-tests.md  9-4-integration-test.md  9-5-further-info.md
coursework1/data/: london_boroughs.geojson  newdata.csv  population.csv  recycling_database.db
coursework1/src/: app.py
coursework1/src/assets/: custom.css
coursework1/src/pages/: __init__.py  overview.py
coursework1/src/utils/: __init__.py  recycling_figures.py
src/code_samples/: samples.md
src/dash-single/: paralympics_dash.py
src/dash-student/: paralympics_dash.py
tests/: conftest.py
(+41 files in other folders)
