# Basic project information
[project]
name = "comp0034-tutorials"
version = "2025.0.1"
readme = "README.md"

# Most students will use setuptools, though poetry is also an option
[build-system]
requires = ["setuptools",  "setuptools_scm"]
build-backend = "setuptools.build_meta"

# Setuptools configuration see https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout
# By default setuptools will look for `src` directory and auto discover packages
# This project has two directory trees which makes it more complex
[tool.setuptools.packages.find]
where = ["src", "tutor-soln"]

[tool.setuptools.package-dir]
"" = "src"
"tutor" = "src-tutor"

# Setuptools configuration for the data files see https://setuptools.pypa.io/en/stable/userguide/datafiles.html

# Pytest configuration see https://docs.pytest.org/en/stable/reference/customize.html
# and https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -v"
testpaths = ["tests"]
